# firemd

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
skills/firemd/: SKILL.md
skills/firemd/scripts/: ensure_firemd.sh
src/firemd/: __init__.py  cli.py  config.py  firecrawl.py  manifest.py  outputs.py  server.py  util.py
tests/: __init__.py  test_crawl.py  test_inputs.py  test_manifest.py  test_naming.py  test_proxy.py  test_retry.py
